# world-echo-backend

./: .dockerignore  .env.example  .gitignore  BACKEND_PLAN.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: asr.py  auth.py  favorites.py  generation.py  playlists.py  plaza.py  router.py  songs.py  upload.py
app/core/: __init__.py  config.py  exceptions.py  responses.py  security.py
app/db/: init_db.py  models.py  session.py
app/schemas/: asr.py  auth.py  common.py  favorite.py  playlist.py  plaza.py  song.py  upload.py
app/services/: asr_service.py  audio_analysis_service.py  auth_service.py  favorite_service.py  lyrics_generation_service.py  music_generation_service.py  oauth_service.py  playlist_service.py  prompt_refiner_service.py  song_service.py  storage_service.py  vision_prompt_service.py
app/tests/: conftest.py  test_api_endpoints.py  test_core.py  test_generation_helpers.py  test_generation_streams.py  test_services.py  test_websocket_asr.py
database/: init.sql
docs/: API-DOCS.md  world-echo-api.json
